--- a/stone-webapi-breakeven/stone-webapi-breakeven.csproj
+++ b/stone-webapi-breakeven/stone-webapi-breakeven.csproj
@@ -27,4 +27,8 @@
     <PackageReference Include="xunit" Version="2.4.2" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Conveters\" />
+  </ItemGroup>
+
 </Project>
