--- a/stone-webapi-breakeven/stone-webapi-breakeven.csproj
+++ b/stone-webapi-breakeven/stone-webapi-breakeven.csproj
@@ -22,13 +22,10 @@
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
+    <PackageReference Include="Moq" Version="4.18.4" />
     <PackageReference Include="Pomelo.EntityFrameworkCore.MySql" Version="7.0.0" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.2.3" />
     <PackageReference Include="xunit" Version="2.4.2" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <Folder Include="Conveters\" />
   </ItemGroup>
 
 </Project>
