Adjusts from PR 04

--- a/stone-webapi-breakeven/appsettings.json
+++ b/stone-webapi-breakeven/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "ReadConnection": "server=localhost;database=breakeven;uid=root;password=mysql"
+    "ReadConnection": "server=localhost;database=breakeven;uid={user};password={password}"
   }
 }
